[package]
name = "odilia-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdev = { git="https://github.com/yggdrasil-sr/rdev", features = ["unstable_grab"]}
lazy_static = "1.4.0"
futures = "0.3.17"
tokio = { version ="1.4.0", features = ["sync", "parking_lot"]}
