[package]
name = "odilia-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.4.0", features = ["sync", "parking_lot", "rt"]}
rdev = { version = "0.5.1", features = ["unstable_grab"] }
once_cell = "1.8.0"
lazy_static = { version = "1.4.0" }
odilia-common = { git = "https://github.com/yggdrasil-sr/odilia-common" }
